--- a/css/style.css
+++ b/css/style.css
@@ -142,3 +142,35 @@ hr{
     height: 1px;
     border:0;
 }
+
+/*media query*/
+
+@media screen and (max-width:360px) {
+    .menu{
+        margin:30px 0 20px 0;
+    }
+
+    .hero_img{
+        width:100%;
+   
+        
+        height: auto;
+        margin: 0 auto;
+    }
+    .hero_img img{
+        width:100%;
+    }
+    .clips{
+        width:300px;
+        flex-direction: column;/* 플렉스-방햐ㅐㅇ:컬럼(=열,수직)*/
+    }
+
+    hr{
+        margin: 30px 0 0 0;
+    }
+    
+    .info{
+        background-color: #005891;
+        color:white;
+        padding:30px 0;
+}
