--- a/css/style.css
+++ b/css/style.css
@@ -207,7 +207,11 @@ hr{
     }
 
     .clip:nth-child(1) {
-        margin-right: 0;
+        margin:0 auto;
+    }
+
+    .clip:nth-child(2){
+        margin:0 auto;
     }
 
     .clip a {
