--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ LoVe,HAte ==> 러브~헤이트~ */
     
     margin: 0 auto;
     display:flex;
+    justify-content: center;
     font-size: 0; /* 글자 크기 : 0 (없음, 표시x, 글자마다 자동으로 생성되는 여백x*/
 }
 
